--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,5 +27,5 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }} # false positives in windows
         run: go test -race ./...
 
-      - name: Fuzz File Read  # fuzz tests need to be run separately
-        run:  go test -fuzztime=10s -fuzz=FuzzSafeOpen -run "FuzzSafeOpen" ./file/...
+#      - name: Fuzz File Read  # fuzz tests need to be run separately
+#        run:  go test -fuzztime=10s -fuzz=FuzzSafeOpen -run "FuzzSafeOpen" ./file/...
